# rust_aws_sdk_example_rekognition

./: .env.example  Cargo.toml  README.md
src/: aws_translate.rs  lib.rs  main.rs  utils.rs
src/handlers/: detect.rs  mod.rs
