[package]
name = "aws_sdk_example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-rekognition = "1.33.0"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
