[package]
name = "aws_sdk_example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-rekognition = "1.33.0"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
aws-sdk-s3 = "1.36.0"
aws-smithy-types = "1.2.0"
aws-sdk-translate = "1.31.0"
anyhow = "1.0.86"
tabled = "0.15.0"
color-print = "0.3.6"
terminal_size = "0.3.0"
clap = { version = "4.5.7", features = ["cargo"] }

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "rekognition"
path = "src/bin/main.rs"
